--- a/samconfig.toml
+++ b/samconfig.toml
@@ -7,3 +7,4 @@ s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-jhlo0fua5gk0"
 s3_prefix = "partygames-app"
 region = "ap-southeast-2"
 capabilities = "CAPABILITY_IAM"
+confirm_changeset = true
