--- a/template.yaml
+++ b/template.yaml
@@ -35,6 +35,7 @@ Resources:
           required:
             - type
             - allowNicknames
+            - userId
           properties:
             type:
               type: string
@@ -43,6 +44,8 @@ Resources:
             maxPartitions:
               type: integer
             name:
+              type: string
+            userId:
               type: string
 
   GameFunction:
@@ -55,10 +58,15 @@ Resources:
         - DynamoDBCrudPolicy:
             TableName:
               Ref: GamesTableParam
+        - DynamoDBCrudPolicy:
+            TableName:
+              Ref: UsersTableParam
       Environment:
         Variables:
           GAMES_TABLE_NAME:
               Ref: GamesTableParam
+          USERS_TABLE_NAME:
+              Ref: UsersTableParam
       Events:
         GetGameApi:
           Type: Api
@@ -90,7 +98,7 @@ Resources:
               Ref: UsersTableParam
       Environment:
         Variables:
-          GAMES_TABLE_NAME:
+          USERS_TABLE_NAME:
               Ref: UsersTableParam
       Events:
         GetUserApi:
