--- a/src/game/package.json
+++ b/src/game/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "hello_world",
+  "name": "game_function",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
   "main": "app.js",
-  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
-  "author": "SAM CLI",
-  "license": "MIT",
+  "repository": "https://github.com/IsaacMurtagh/PartyGames_Server",
+  "author": "Isaac Murtagh",
   "dependencies": {
     "axios": "^0.21.1",
     "http-errors": "^1.8.0",
     "moment": "^2.29.1",
-    "uuid": "^3.3.2"  
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "test": "mocha tests/unit/"
