--- a/src/_layers/common/package.json
+++ b/src/_layers/common/package.json
@@ -4,6 +4,12 @@
   "main": "app.js",
   "repository": "https://github.com/IsaacMurtagh/PartyGames_Server",
   "author": "Isaac Murtagh",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "http-errors": "^1.8.0",
+    "moment": "^2.29.1",
+    "uuid": "^3.3.2"
+  },
   "scripts": {
     "test": "mocha tests/unit/"
   },
