--- a/src/user/package.json
+++ b/src/user/package.json
@@ -1,22 +1,7 @@
 {
-  "name": "hello_world",
+  "name": "game_function",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
   "main": "app.js",
-  "repository": "https://github.com/awslabs/aws-sam-cli/tree/develop/samcli/local/init/templates/cookiecutter-aws-sam-hello-nodejs",
-  "author": "SAM CLI",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "http-errors": "^1.8.0",
-    "moment": "^2.29.1",
-    "uuid": "^3.3.2"  
-  },
-  "scripts": {
-    "test": "mocha tests/unit/"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1"
-  }
+  "repository": "https://github.com/IsaacMurtagh/PartyGames_Server",
+  "author": "Isaac Murtagh"
 }
