--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,10 +1,19 @@
 version = 0.1
-[default]
-[default.deploy]
 [default.deploy.parameters]
-stack_name = "partygames-app"
+stack_name = "partygames-dev"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-jhlo0fua5gk0"
-s3_prefix = "partygames-app"
+s3_prefix = "partygames-dev"
 region = "ap-southeast-2"
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = false
+parameter_overrides=["Environment=dev"]
+
+[prod.deploy.parameters]
+stack_name = "partygames-prod"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-jhlo0fua5gk0"
+s3_prefix = "partygames-prod"
+region = "ap-southeast-2"
+capabilities = "CAPABILITY_IAM"
+confirm_changeset = true
+parameter_overrides=["Environment=prod"]
+
