--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "GAMES_TABLE_NAME=games USERS_TABLE_NAME=users jest"
+    "test": "GAMES_TABLE_NAME=games USERS_TABLE_NAME=users CONNECTIONS_TABLE_NAME=connections jest"
   },
   "devDependencies": {
     "@shelf/jest-dynamodb": "^1.8.1",
