--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "http-errors": "^1.8.0",
     "jest": "^27.0.6",
     "moment": "^2.29.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "verror": "^1.10.0"
   }
 }
