--- a/src/sendmessage/package.json
+++ b/src/sendmessage/package.json
@@ -5,7 +5,9 @@
   "main": "src/app.js",
   "author": "SAM CLI",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "verror": "^1.10.0"
+  },
   "devDependencies": {
     "aws-sdk": "^2.739.0"
   }
