Broadcast message on disconnect

--- a/src/onconnect/package.json
+++ b/src/onconnect/package.json
@@ -5,9 +5,7 @@
   "main": "src/app.js",
   "author": "SAM CLI",
   "license": "MIT",
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
     "aws-sdk": "^2.739.0"
   }
