--- a/template.yaml
+++ b/template.yaml
@@ -165,7 +165,13 @@ Resources:
       Policies:
       - DynamoDBCrudPolicy:
           TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", connectionsTable ]
-        
+      - Statement:
+        - Effect: Allow
+          Action:
+          - 'execute-api:ManageConnections'
+          Resource:
+          - !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${SimpleChatWebSocket}/*'
+
   OnDisconnectPermission:
     Type: AWS::Lambda::Permission
     DependsOn:
