--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "jest": "^27.0.6",
     "moment": "^2.29.1",
     "uuid": "^3.3.2",
-    "verror": "^1.10.0"
-  }
+    "verror": "^1.10.0",
+    "joi": "^17.4.1"
+
+  },
+  "dependencies": {}
 }
