--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "devDependencies": {
     "@shelf/jest-dynamodb": "^1.8.1",
     "aws-sdk": "^2.939.0",
+    "aws-sdk-mock": "^5.2.1",
     "http-errors": "^1.8.0",
     "jest": "^27.0.6",
+    "joi": "^17.4.1",
     "moment": "^2.29.1",
     "uuid": "^3.3.2",
-    "verror": "^1.10.0",
-    "joi": "^17.4.1"
-
-  },
-  "dependencies": {}
+    "verror": "^1.10.0"
+  }
 }
