--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "joi": "^17.4.1",
     "moment": "^2.29.1",
     "uuid": "^3.3.2",
-    "verror": "^1.10.0"
+    "verror": "^1.10.0",
+    "sinon": "^11.1.1"
   }
 }
