--- a/template.yaml
+++ b/template.yaml
@@ -115,6 +115,10 @@ Resources:
       Policies:
       - DynamoDBCrudPolicy:
           TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", connectionsTable ]
+      - DynamoDBCrudPolicy:
+          TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", usersTable ]
+      - DynamoDBCrudPolicy:
+          TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", gamesTable ]
       - Statement:
         - Effect: Allow
           Action:
@@ -165,6 +169,8 @@ Resources:
       Policies:
       - DynamoDBCrudPolicy:
           TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", connectionsTable ]
+      - DynamoDBCrudPolicy:
+          TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", gamesTable ]
       - Statement:
         - Effect: Allow
           Action:
