--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "test": "GAMES_TABLE_NAME=games USERS_TABLE_NAME=users CONNECTIONS_TABLE_NAME=connections jest"
   },
   "devDependencies": {
+    "@lambda-middleware/http-error-handler": "^2.0.0",
     "@shelf/jest-dynamodb": "^1.8.1",
     "aws-sdk": "^2.939.0",
     "aws-sdk-mock": "^5.2.1",
@@ -10,8 +11,8 @@
     "jest": "^27.0.6",
     "joi": "^17.4.1",
     "moment": "^2.29.1",
+    "sinon": "^11.1.1",
     "uuid": "^3.3.2",
-    "verror": "^1.10.0",
-    "sinon": "^11.1.1"
+    "verror": "^1.10.0"
   }
 }
