--- a/template.yaml
+++ b/template.yaml
@@ -70,6 +70,7 @@ Resources:
     DependsOn:
     - ConnectRoute
     - DisconnectRoute
+    - StartGameRoute
     Properties:
       ApiId: !Ref SimpleChatWebSocket
 
@@ -185,6 +186,56 @@ Resources:
     Properties:
       Action: lambda:InvokeFunction
       FunctionName: !Ref OnDisconnectFunction
+      Principal: apigateway.amazonaws.com
+
+  StartGameRoute:
+    Type: AWS::ApiGatewayV2::Route
+    Properties:
+      ApiId: !Ref SimpleChatWebSocket
+      RouteKey: startgame
+      AuthorizationType: NONE
+      OperationName: StartGameRoute
+      Target: !Join
+        - '/'
+        - - 'integrations'
+          - !Ref StartGameInteg
+
+  StartGameInteg:
+    Type: AWS::ApiGatewayV2::Integration
+    Properties:
+      ApiId: !Ref SimpleChatWebSocket
+      Description: Start Game Integration
+      IntegrationType: AWS_PROXY
+      IntegrationUri: 
+        Fn::Sub:
+            arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${StartGameFunction.Arn}/invocations
+
+  StartGameFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: src/startGame
+      Handler: app.handler
+      MemorySize: 256
+      Runtime: nodejs12.x
+      Layers:
+        - Ref: CommonLayer
+      Policies:
+      - DynamoDBCrudPolicy:
+          TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", connectionsTable ]
+      - Statement:
+        - Effect: Allow
+          Action:
+          - 'execute-api:ManageConnections'
+          Resource:
+          - !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${SimpleChatWebSocket}/*'
+
+  StartGamePermission:
+    Type: AWS::Lambda::Permission
+    DependsOn:
+      - SimpleChatWebSocket
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref StartGameFunction
       Principal: apigateway.amazonaws.com
   
   # -- REST API --
