--- a/template.yaml
+++ b/template.yaml
@@ -222,6 +222,8 @@ Resources:
       Policies:
       - DynamoDBCrudPolicy:
           TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", connectionsTable ]
+      - DynamoDBCrudPolicy:
+          TableName: !FindInMap [ EnvironmentMap, !Ref "Environment", gamesTable ]
       - Statement:
         - Effect: Allow
           Action:
